{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 236,
  "lineage": "da5970cb-5e87-1e19-f12e-dbd4d459b69e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b823aa03ebf22c93",
            "arn": "arn:aws:ec2:ap-south-1:502710547370:instance/i-044c49cd4bec6fd1b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044c49cd4bec6fd1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-load",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0281e1d2dbd0af818",
            "private_dns": "ip-10-0-1-18.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-13-127-22-145.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.22.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ef8410b94a33398",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea516185ac3d34f7",
            "tags": {
              "Name": "my-tf-lb-web-0"
            },
            "tags_all": {
              "Name": "my-tf-lb-web-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bbbb807f62544af"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.db_subnets",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.azs",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b823aa03ebf22c93",
            "arn": "arn:aws:ec2:ap-south-1:502710547370:instance/i-01b0ac4ae30ee6e5f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b0ac4ae30ee6e5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-load",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6a740e12ef862bd",
            "private_dns": "ip-10-0-2-152.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.152",
            "public_dns": "ec2-13-232-185-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.185.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078c0766047482710",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a37a8c6d05a20983",
            "tags": {
              "Name": "my-tf-lb-web-1"
            },
            "tags_all": {
              "Name": "my-tf-lb-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bbbb807f62544af"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.db_subnets",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.azs",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:internet-gateway/igw-01600adc9742b4da1",
            "id": "igw-01600adc9742b4da1",
            "owner_id": "502710547370",
            "tags": {
              "Name": "my-tf-lb-igw"
            },
            "tags_all": {
              "Name": "my-tf-lb-igw"
            },
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:loadbalancer/app/my-tf-lb-alb/0131dfb28d59645a",
            "arn_suffix": "app/my-tf-lb-alb/0131dfb28d59645a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-tf-lb-alb-1338472404.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:loadbalancer/app/my-tf-lb-alb/0131dfb28d59645a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-tf-lb-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00cb008b559db2d77"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a37a8c6d05a20983"
              },
              {
                "subnet_id": "subnet-0ea516185ac3d34f7"
              }
            ],
            "subnets": [
              "subnet-0a37a8c6d05a20983",
              "subnet-0ea516185ac3d34f7"
            ],
            "tags": {
              "Name": "my-tf-lb-alb"
            },
            "tags_all": {
              "Name": "my-tf-lb-alb"
            },
            "vpc_id": "vpc-0f14e0d5566fa644a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:listener/app/my-tf-lb-alb/0131dfb28d59645a/4d5f32e9dd252227",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:listener/app/my-tf-lb-alb/0131dfb28d59645a/4d5f32e9dd252227",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:loadbalancer/app/my-tf-lb-alb/0131dfb28d59645a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db",
            "arn_suffix": "targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tf-lb-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-tf-lb-tg"
            },
            "tags_all": {
              "Name": "my-tf-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db-20251209185452084600000005",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db",
            "target_id": "i-044c49cd4bec6fd1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.db_subnets",
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.azs",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db-20251209185452155000000006",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:502710547370:targetgroup/my-tf-lb-tg/c1d6d0ed77ef23db",
            "target_id": "i-01b0ac4ae30ee6e5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.db_subnets",
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.azs",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01600adc9742b4da1",
            "id": "r-rtb-08af79bbfc0cabcd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08af79bbfc0cabcd4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:route-table/rtb-08af79bbfc0cabcd4",
            "id": "rtb-08af79bbfc0cabcd4",
            "owner_id": "502710547370",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-tf-lb-public-rt"
            },
            "tags_all": {
              "Name": "my-tf-lb-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assocs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae04d95be3bc1d5",
            "route_table_id": "rtb-08af79bbfc0cabcd4",
            "subnet_id": "subnet-0ea516185ac3d34f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00454f01f51e7d48e",
            "route_table_id": "rtb-08af79bbfc0cabcd4",
            "subnet_id": "subnet-0a37a8c6d05a20983"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:security-group/sg-00cb008b559db2d77",
            "description": "Allow HTTP to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cb008b559db2d77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-tf-lb-alb-sg",
            "name_prefix": "",
            "owner_id": "502710547370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-lb-alb-sg"
            },
            "tags_all": {
              "Name": "my-tf-lb-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:security-group/sg-0fb08753948ed2bc9",
            "description": "Allow EC2 instances to access RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb08753948ed2bc9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bbbb807f62544af"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-tf-lb-db-sg",
            "name_prefix": "",
            "owner_id": "502710547370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-lb-db-sg"
            },
            "tags_all": {
              "Name": "my-tf-lb-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:security-group/sg-03bbbb807f62544af",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bbbb807f62544af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask App Traffic from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (change for production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-tf-lb-ec2-sg",
            "name_prefix": "",
            "owner_id": "502710547370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-lb-ec2-sg"
            },
            "tags_all": {
              "Name": "my-tf-lb-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:subnet/subnet-0ea516185ac3d34f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea516185ac3d34f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502710547370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-tf-lb-public-0"
            },
            "tags_all": {
              "Name": "my-tf-lb-public-0"
            },
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:subnet/subnet-0a37a8c6d05a20983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a37a8c6d05a20983",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502710547370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-tf-lb-public-1"
            },
            "tags_all": {
              "Name": "my-tf-lb-public-1"
            },
            "vpc_id": "vpc-0f14e0d5566fa644a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502710547370:vpc/vpc-0f14e0d5566fa644a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f497d355f917039",
            "default_route_table_id": "rtb-0ce755beb9dda8a9e",
            "default_security_group_id": "sg-0668895070437f735",
            "dhcp_options_id": "dopt-0c59c999875e60ad6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f14e0d5566fa644a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce755beb9dda8a9e",
            "owner_id": "502710547370",
            "tags": {
              "Name": "my-tf-lb-vpc"
            },
            "tags_all": {
              "Name": "my-tf-lb-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}